yaml-examples/metube/metube-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metube
  namespace: default
  labels:
    app: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      containers:
      - name: metube
        image: alexta69/metube
        imagePullPolicy: Always
        ports:
          - containerPort: 8081
        volumeMounts:
          - mountPath: /downloads
            name: downloads
      volumes:
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
