yaml-examples/metube/metube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: default
spec:
  selector:
    app: metube
  ports:
  - port: 8081
    targetPort: 8081
